# coil

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
nix/modules/: devshell.nix  rust.nix
src/: main.rs  sample.md
