[package]
authors = ["TaeruAlethea <61478538+TaeruAlethea@users.noreply.github.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "coil-markdown"
description = "A literate programming tool for Markdown"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
